<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/msgBonjour"/>

    <EditText
        android:id="@+id/edtNom"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:inputType="text"/>

    <Button
        android:id="@+id/btnMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msgMessage" />

    <Button
        android:id="@+id/btnTelephoner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msgTelephoner" />

    <Button
        android:id="@+id/btnSMS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msgSMS" />

    <Button
        android:id="@+id/btnJeu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msgJeu" />

  </LinearLayout>